--- a/debian-stretch-makepasswd/Dockerfile
+++ b/debian-stretch-makepasswd/Dockerfile
@@ -4,6 +4,8 @@ MAINTAINER Walter Antolini <antwal@gmail.com>
 
 COPY setup/ /usr/local/debian-base-setup/
 
+# TODO: Add custom script for generate custom password
+
 RUN /usr/local/debian-base-setup/011-debian-base-makepasswd
 
 ENTRYPOINT ["makepasswd"]
