--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,16 @@ before_install:
   - ./.travis/before_install.sh
 
 script:
-  - chmod a+x ./.travis/build.sh
-  - ./.travis/build.sh
+  - chmod a+x ./unittest.sh
+  - ./unittest.sh build verbose cleanup
 
 # only execute the following instructions in
 # the case of a success (failing at this point
 # won't mark the build as a failure).
 # To have `DOCKER_USERNAME` and `DOCKER_PASSWORD`
-# filled you need to either use `travis`' cli 
+# filled you need to either use `travis`' cli
 # and then `travis set ..` or go to the travis
-# page of your repository and then change the 
+# page of your repository and then change the
 # environment in the settings pannel.
 #after_success:
 #  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
