--- a/debian-stretch-python/hooks/build
+++ b/debian-stretch-python/hooks/build
@@ -1,2 +1,3 @@
 #!/bin/bash
+echo "$IMAGE_NAME - ${DOCKER_TAG} - $DOCKERFILE_PATH"
 docker build -t $IMAGE_NAME --build-arg version="${DOCKER_TAG}" -f $DOCKERFILE_PATH .
