Added Travis CI Stage Updated Build Args to Python Images Fixed Unit Test Scripts for support Travis Stage and Docker Build Args

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,46 @@ sudo: required
 services:
   - docker
 
+branches:
+  only:
+  - master
+
+git:
+  submodules:
+    false
+
 before_install:
-#  - chmod a+x ./.travis/before_install.sh
   - bash ./.travis/before_install.sh
 
 install:
   - bash ./.travis/install.sh
 
-script:
-#  - chmod a+x ./unittest.sh
-  - bash ./unittest.sh build verbose cleanup
+# script:
+#   - bash ./unittest.sh --build --verbose --cleanup
 
-#jobs:
-#  include:
-#    - stage: test
-#      name: "Debian Stretch Minimal"
-#      script: bash ./unittest.sh debian-stretch-minimal build verbose cleanup
-#    - stage: test
-#      name: "Debian Stretch Makepasswd"
-#      script: bash ./unittest.sh debian-stretch-makepasswd build verbose cleanup
-
+jobs:
+ include:
+   - stage: test
+     name: "Base Minimal"
+     script: bash ./unittest.sh --build debian-stretch-minimal --verbose --cleanup
+   - stage: test
+     name: "Makepasswd"
+     script: bash ./unittest.sh --build debian-stretch-makepasswd --verbose --cleanup
+   - stage: test
+     name: "OpenSSH"
+     script: bash ./unittest.sh --build debian-stretch-openssh --verbose --cleanup
+   - stage: test
+     name: "NodeJS"
+     script: bash ./unittest.sh --build debian-stretch-nodevnc --tag=latest --verbose --cleanup
+   - stage: test
+     name: "Python 3.5.6"
+     script: bash ./unittest.sh --build debian-stretch-python --tag=3.5.6 --verbose --cleanup --args="version=3.5.6 keyserver=eu.pool.sks-keyservers.net"
+   - stage: test
+     name: "Python 3.6.8"
+     script: bash ./unittest.sh --build debian-stretch-python --tag=3.6.8 --verbose --cleanup --args="version=3.6.8 keyserver=eu.pool.sks-keyservers.net"
+   - stage: test
+     name: "Python 3.7.2"
+     script: bash ./unittest.sh --build debian-stretch-python --tag=3.7.2 --verbose --cleanup --args="version=3.7.2 keyserver=eu.pool.sks-keyservers.net"
 
 
 # only execute the following instructions in
